examples/test/testpolicy17458.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17458
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key36: value12
      key16: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value49
          key16: value20
      podSelector:
        matchLabels:
          key23: value9
          key20: value22
          key30: value27
